@@ -5,7 +5,7 @@ set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
 SET(MSVC_INCREMENTAL_DEFAULT ON)
 
 PROJECT(BULLET_PHYSICS)
-SET(BULLET_VERSION 2.80)
+SET(BULLET_VERSION 2.81)
 
 IF(COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
